fix extended screen on mobile

--- a/public/CostumStyle/css/homepage.css
+++ b/public/CostumStyle/css/homepage.css
@@ -13,6 +13,7 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
     overflow: overlay;
@@ -23,18 +24,18 @@ body{
     --second-color:#6994FA;
 }
 ::-webkit-scrollbar{
-    background: transparent;
-    width: 10px;
+    width: 1em;
 }
 ::-webkit-scrollbar-thumb{
-    border-radius: 10px;
+    border-radius: 1em;
     background-color: #e8effd;
+    background: transparent;
 }
 ::-webkit-scrollbar-thumb:hover{
     background-color: #eef1f8;
 }
 ::-webkit-scrollbar-corner{
-    border-radius: 10px;
+    border-radius: 1em;
 }
 section{
     padding: 50px 10%;
